# winhorse

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  docs.md  handle_manager.hpp  handle_registry.hpp  module_manager.hpp  process.hpp  syscalls.hpp  wintypes.hpp
src/: main.cpp  syscalls.cpp  windows.cpp
